# Lucia-the-Orchestrator

./: .dockerignore  .gitignore  CONTRIBUTING.md  Commands.md  Dockerfile  LICENSE  Makefile  README-MasterClaw.md  README-summary.md  README.md  SECURITY.md  docker-compose.cli.yml  dry_run.py  pyproject.toml
.cursor/rules/: use-venv.mdc
.github/workflows/: ci.yml  publish.yml
dave_it_guy/: .gitignore  __init__.py  __main__.py  cli.py  deploy.py  doctor.py  hand_calibration.py  llava_vision.py  masterclaw_tui.py  simple_search.py  test-container.sh  voice_assistant.py  voice_chat.py  voice_session_memory.py  voice_summarize.py  voice_tts.py
dave_it_guy/cloud/azure/openclaw/: README.md  cloud-init.yml.j2  main.tf  outputs.tf  variables.tf
dave_it_guy/examples/: __init__.py  hand_interaction.py
dave_it_guy/templates/: __init__.py
dave_it_guy/templates/ollama/: docker-compose.yml.j2  env.example
dave_it_guy/templates/openclaw/: docker-compose.yml.j2  env.example
dave_it_guy/templates/openclaw/config/: openclaw.json.j2
dave_it_guy/templates/openclaw/masterclaw/: Dockerfile  README.md  app.py  worker.py
dave_it_guy/templates/openclaw/scripts/: run_openclaw_task.py
dave_it_guy/templates/openclaw/workspace/: AGENTS.md  simple_qdrant.py  simple_scheduler.py  simple_search.py  simple_subagent.py
dave_it_guy/templates/rag/: docker-compose.yml.j2  env.example
docs/site/: index.html  script.js  styles.css
krakenwhip/: .gitignore  __init__.py  __main__.py  cli.py  deploy.py  doctor.py  simple_search.py  test-container.sh
krakenwhip/cloud/azure/openclaw/: README.md  cloud-init.yml.j2  main.tf  outputs.tf  variables.tf
krakenwhip/templates/ollama/: docker-compose.yml.j2  env.example
krakenwhip/templates/openclaw/: docker-compose.yml.j2  env.example
krakenwhip/templates/openclaw/config/: openclaw.json.j2
krakenwhip/templates/openclaw/workspace/: simple_qdrant.py  simple_search.py
krakenwhip/templates/rag/: docker-compose.yml.j2  env.example
scripts/: simple_search.py
tests/: test_templates.py
