[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dave-it-guy"
version = "0.2.9"
description = "Dave IT Guy — Deploy AI stacks with one command. OpenClaw, Ollama, Qdrant—fully containerized. Run locally or ship to the cloud. Same stack, anywhere."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "NeuroGamingLab", email = "NeuroGamingLab@gmail.com" },
]
keywords = ["ai", "docker", "deploy", "ollama", "qdrant", "openclaw", "infrastructure", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
cloud = ["python-hcl2>=4.0.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
search = ["duckduckgo-search>=6.0.0"]

[project.scripts]
dave-it-guy = "dave_it_guy.cli:app"
simple-search = "dave_it_guy.simple_search:main"

[project.urls]
Homepage = "https://github.com/NeuroGamingLab/dave-it-guy"
Documentation = "https://github.com/NeuroGamingLab/dave-it-guy#readme"
Repository = "https://github.com/NeuroGamingLab/dave-it-guy"
Issues = "https://github.com/NeuroGamingLab/dave-it-guy/issues"

[tool.hatch.build.targets.sdist]
exclude = [".cursor", ".cursorignore"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# Optional[] required in cli.py for Python 3.9 (Typer evaluates annotations at runtime)
[tool.ruff.lint.per-file-ignores]
"dave_it_guy/cli.py" = ["UP045"]

[tool.pytest.ini_options]
testpaths = ["tests"]
